# optiver_trading_game_client

./: CMakeLists.txt  README.md  install.sh  prep_strigo.sh
src/: CMakeLists.txt  autotrader.cc  autotrader.h  autotrader_main.cc  execution_client.cc  execution_client.h  information_client.cc  information_client.h  order_message.h  pnl.h  trading_result.h  tsc_clock.h  types.h  udp_client.cc  udp_client.h  vwap.h
